--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   # State management
   get: ^4.6.1
-  # Google Firebase  
+  # Firebase  
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
-  google_sign_in: ^5.2.3
   cloud_firestore: ^3.1.8
+  # Google
+  google_sign_in: ^5.2.4
+  google_fonts: ^2.3.1
+  # outros
+  validatorless: ^1.2.1
+
+
 
 dev_dependencies:
   flutter_test:
